Fix alignment of organizers + helpers

--- a/src/documents/themes/yellow-swan/css/theme.less
+++ b/src/documents/themes/yellow-swan/css/theme.less
@@ -199,3 +199,15 @@ footer {
 footer p {
   margin-bottom: 0;
 }
+
+.partner {
+  float: left;
+}
+
+.partner-organization {
+  width: 75%;
+}
+
+.partner-helper {
+  width: 25%;
+}
